[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PlayerCam.gd" type="Script" id=2]
[ext_resource path="res://Fonts/coolvetica condensed rg.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Game/Player.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=7]
[ext_resource path="res://Scripts/AttackLine.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PB.gd" type="Script" id=9]
[ext_resource path="res://Scripts/NewPB.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=11]
[ext_resource path="res://Scenes/MusicPopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/ShootBar.gd" type="Script" id=13]

[sub_resource type="SegmentShape2D" id=4]

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 0.905014, 0.414062, 1, 0, 0, 0, 0 )

[sub_resource type="Animation" id=7]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 4.59482, 0.176777 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackLine:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../CanvasLayer/Death/CenterContainer/Control:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 12.1257, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../CanvasLayer/Death:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../CanvasLayer/Death/CenterContainer/Control:rect_rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 2.92817, 3.13834 ),
"update": 0,
"values": [ 0.0, 18.2 ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("Camera2D")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 10 ],
"method": "add_trauma"
} ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("AudioStreamPlayer2D")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "End"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/Overlay/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.183011, 0.15932 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/Upgrades:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/Overlay/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.196146, 4.14106 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Upgrade"
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/Upgrades:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 0.217638, 1, 1, 0.217638 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CanvasLayer/Upgrades:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CanvasLayer/Upgrades:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 0.176777, 3.86375, 0.176777 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 30 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39, 39 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 41, 41 )

[sub_resource type="Environment" id=5]
background_mode = 4
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 1.15
dof_blur_far_distance = 0.15
glow_enabled = true
glow_intensity = 1.81
glow_bloom = 0.35

[sub_resource type="DynamicFont" id=16]
size = 153
outline_size = 16
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 103
outline_size = 16
outline_color = Color( 0.32549, 0.172549, 0.172549, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 154
outline_size = 13
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=14]
size = 134
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 76
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.654902 )

[sub_resource type="DynamicFont" id=18]
size = 432
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=19]
size = 239
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=20]
size = 89
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.384314, 1, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.164706, 0.164706, 0.164706, 0.47451 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Game" type="Node2D"]
script = ExtResource( 7 )

[node name="Player" type="KinematicBody2D" parent="." groups=["Player"]]
position = Vector2( 271, 278 )
z_index = 183
script = ExtResource( 5 )

[node name="AttackLine" type="Line2D" parent="Player"]
width = 5.0
joint_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource( 8 )

[node name="AttackDelay" type="Timer" parent="Player/AttackLine"]
one_shot = true

[node name="Area2D" type="Area2D" parent="Player/AttackLine"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AttackLine/Area2D"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.172, 0.172 )
texture = ExtResource( 4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/Sprite"]
position = Vector2( -197.674, 5.81396 )
rotation = -2.98355
scale = Vector2( 5.81395, 5.81395 )
lifetime = 0.2
lifetime_randomness = 0.7
local_coords = false
draw_order = 1
gravity = Vector2( 0, 0 )
initial_velocity = 321.1
initial_velocity_random = 0.14
angular_velocity = 0.92
angular_velocity_random = 1.0
angle = 369.9
angle_random = 1.0
scale_amount = 28.52
scale_amount_random = 0.26
color_ramp = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -3.05176e-05, 0 )
rotating = true
current = true
smoothing_enabled = true
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Player/Camera2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/Die = SubResource( 7 )
anims/End = SubResource( 12 )
anims/RESET = SubResource( 21 )
anims/Start = SubResource( 13 )
anims/Upgrade = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 8 )

[node name="DeathParticles" type="CPUParticles2D" parent="Player"]
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 246.5
angular_velocity = 258.03
angular_velocity_random = 0.37
scale_amount = 33.26
scale_amount_random = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MusicPopup" parent="CanvasLayer" instance=ExtResource( 12 )]

[node name="Death" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Death"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -312.0

[node name="NewPB" type="Label" parent="CanvasLayer/Death/VBoxContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 16 )
text = "NEW PB!"
align = 1
valign = 1
script = ExtResource( 10 )

[node name="Label2" type="Label" parent="CanvasLayer/Death/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 10 )
text = "ENTER TO RESTART"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Death"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="Control" type="Control" parent="CanvasLayer/Death/CenterContainer"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/Death/CenterContainer/Control"]
margin_left = -199.0
margin_top = -93.0
margin_right = 199.0
margin_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 1.662, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "GET GOOD"
align = 1

[node name="Overlay" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/Overlay"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )

[node name="Score" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="RichTextLabel" parent="CanvasLayer/Score"]
margin_left = 30.0
margin_right = 1126.0
margin_bottom = 213.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "[wave]0[/wave]"
text = "0"
script = ExtResource( 6 )

[node name="PB" type="RichTextLabel" parent="CanvasLayer/Score"]
margin_left = 32.0
margin_top = 125.0
margin_right = 1128.0
margin_bottom = 338.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 15 )
bbcode_enabled = true
bbcode_text = "PB - [wave]0[/wave]"
text = "PB - 0"
script = ExtResource( 9 )

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 17 )

[node name="Label" type="Label" parent="CanvasLayer/Pause/PanelContainer"]
margin_top = 280.0
margin_right = 1920.0
margin_bottom = 799.0
custom_fonts/font = SubResource( 18 )
text = "Paused"
align = 1

[node name="Upgrades" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Upgrades"]
anchor_right = 1.0
margin_bottom = 482.0

[node name="Label" type="Label" parent="CanvasLayer/Upgrades/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 19 )
text = "UPGRADE!"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/Upgrades/VBoxContainer"]
margin_top = 292.0
margin_right = 1920.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 20 )
text = "-0.1s fire rate!"
align = 1

[node name="Shoot Bar" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_bottom = -30.0

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Shoot Bar"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -46.0
margin_right = 366.0
custom_styles/fg = SubResource( 23 )
custom_styles/bg = SubResource( 24 )
value = 50.0
percent_visible = false
script = ExtResource( 13 )

[connection signal="doneloading" from="." to="." method="_on_Game_doneloading"]
[connection signal="died" from="Player" to="CanvasLayer/Death/VBoxContainer/NewPB" method="_on_Player_died"]
[connection signal="timeout" from="Player/AttackLine/AttackDelay" to="Player" method="_on_AttackDelay_timeout"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="Player" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="CanvasLayer/Death/VBoxContainer/NewPB" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
